@@ -47,7 +47,7 @@ namespace DiscImageChef.Core.Devices.Dumping
     public class SCSI
     {
         // TODO: Get cartridge serial number from Certance vendor EVPD
-        public static void Dump(Device dev, string devicePath, string outputPrefix, ushort retryPasses, bool force, bool dumpRaw, bool persistent, bool stopOnError)
+        public static void Dump(Device dev, string devicePath, string outputPrefix, ushort retryPasses, bool force, bool dumpRaw, bool persistent, bool stopOnError, bool separateSubchannel)
         {
             byte[] senseBuf = null;
             bool sense = false;
@@ -145,7 +145,7 @@ namespace DiscImageChef.Core.Devices.Dumping
 
             if(dev.SCSIType == Decoders.SCSI.PeripheralDeviceTypes.MultiMediaDevice)
             {
-                MMC.Dump(dev, devicePath, outputPrefix, retryPasses, force, dumpRaw, persistent, stopOnError, ref sidecar, ref dskType);
+                MMC.Dump(dev, devicePath, outputPrefix, retryPasses, force, dumpRaw, persistent, stopOnError, ref sidecar, ref dskType, separateSubchannel);
 
                 DicConsole.WriteLine("Writing metadata sidecar");
 
